# fastapi-cython

./: .gitignore  Makefile  README.md  build.py  pyproject.toml  setup.cfg
src/app/: main.py
src/app/cases/: __init__.py  case_1.py  case_2.py  case_3.py
tests/: conftest.py  test_1.py  test_2.py  test_3.py
